--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,16 @@ name = "zero2prod"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "zero2prod"
+
 [dependencies]
+actix-web = "4"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 
 # On Windows
 # ```
@@ -24,3 +33,7 @@ rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
 rustflags = ["-C", "link-arg=-fuse-ld=lld"]
 [target.aarch64-apple-darwin]
 rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"]
+
+[dev-dependencies]
+cargo-expand = "1.0.118"
+reqwest = { version = "0.12.26", default-features = false, features = ["rustls-tls", "json"] }
