--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,15 @@ name = "zero2prod"
 actix-web = "4"
 chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
 config = "0.14"
+# env_logger = "0.9"
+# log = "0.4.29"
 serde = { version = "1", features = ["derive"] }
 sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "chrono", "uuid", "migrate"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+tracing = { version = "0.1.44", features = ["log"] }
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.2.0"
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 uuid = { version = "1.19.0", features = ["v4"] }
 
 # On Windows
@@ -40,5 +46,4 @@ rustflags = ["-C", "link-arg=-fuse-ld=lld"]
 rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"]
 
 [dev-dependencies]
-cargo-expand = "1.0.118"
 reqwest = { version = "0.12.26", default-features = false, features = ["rustls-tls", "json"] }
