--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ name = "zero2prod"
 actix-web = "4"
 chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
 config = "0.14"
+secrecy = { version = "0.8", features = ["serde"] }
 # env_logger = "0.9"
 # log = "0.4.29"
 serde = { version = "1", features = ["derive"] }
