--- a/spec.yaml
+++ b/spec.yaml
@@ -38,6 +38,9 @@ services:
     routes:
       - path: /
     envs:
+      - key: APP_ENVIRONMENT
+        scope: RUN_TIME
+        value: production
       - key: APP_DATABASE__USERNAME
         scope: RUN_TIME
         value: ${newsletter.USERNAME}
