--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,9 @@ tracing-actix-web = "0.7.20"
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.2.0"
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+unicode-segmentation = "1"
 uuid = { version = "1.19.0", features = ["v4"] }
+validator = "0.20"
 
 # On Windows
 # ```
@@ -49,4 +51,9 @@ rustflags = ["-C", "link-arg=-fuse-ld=lld"]
 rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"]
 
 [dev-dependencies]
+claims = "0.7"
+fake = "4.4"
+quickcheck = "1.1.0"
+quickcheck_macros = "1.2.0"
+rand = "0.10.0"
 reqwest = { version = "0.12.26", default-features = false, features = ["rustls-tls", "json"] }
